--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@ p {
     </p>
 
     <div class="signature">
-        — From someone who still cares
+        — Raiven
     </div>
 </div>
 
 </body>
 </html>
+
