--- a/index.html
+++ b/index.html
@@ -112,29 +112,32 @@ p {
     <p><strong>Good morning po, Happy Valentine’s Day!!</strong></p>
 
     <p>
-        Well, I don’t even know if I’m allowed to say this, but I still will HAHAHAHA.
-        Ganito kasi—ever since that day, nothing has changed about how I feel for you.
+        Well, I don’t even know if I’m allowed to say this, but I still will HAHAHAHA. 
+        Ganito kasi, ever since that day, nothing has changed about how I feel for you. 
         You’re still that special person to me, and hindi nagbago ’yun.
     </p>
 
     <p>
         Sometimes I wonder, what if I wasn’t immature back then?
         What if I knew how to treat you right at that time?
-        Ever since that day, I’ve always thought that everything happened
-        because I was too immature, and I know that’s the main reason for it all.
+        Ever since that day, I’ve always thought that everything happened because 
+        I was too immature, and I know that’s the main reason for it all.
     </p>
 
     <p>
-        I really want to make up for my mistakes, and I know it’s my fault why you ended up hating me.
+       I really want to make up for my mistakes.
         If I had just been a little more open-minded back then,
-        maybe things would’ve turned out differently.
+        maybe things would’ve turned out differently. 
+        Maybe we’d still be eating together when we have time,
+        maybe we’d still be playing together like we used to.
     </p>
 
     <p>
-        Yeah, I know it’s not easy to forgive someone who once broke your trust.
-        But I’m still hoping that somehow, there’s still a chance for me
-        to make up for my mistakes in the past.
-        It’s just that I still like you the same way I liked you before—nothing has changed.
+        Yeah, I know it’s not easy to forgive someone who once broke your trust. 
+        But I’m still hoping that somehow, there’s still a chance for me to make up 
+        for my mistakes in the past. It’s just that I still like you the same way
+        I liked you before, and nothing has changed even though we’ve been out of
+        contact for a long time.
     </p>
 
     <div class="signature">
@@ -144,4 +147,5 @@ p {
 
 </body>
 </html>
+
 
